
import java.awt.Graphics;
import java.awt.Image;

public class BodyObj extends GameObj {
    // costructor body
    public BodyObj(Image img, int x, int y, GameStart frame) {

        super(img, x, y, frame);
    }

    @Override
    public void paintSelf(Graphics g) {

        super.paintSelf(g);
    }

}
